# Copyright 2016 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

# All LG gn-arguments

declare_args() {
  # Enable sample WEBAPI
  enable_sample_webapi = true

  # Enable Browser control WEBAPI
  enable_browser_control_webapi = true

  # Enable Memory Manager WEBAPI
  enable_memorymanager_webapi = false

  # Disable NEVA_DCHECK by default
  neva_dcheck_always_on = false

  # Use ozone wayland external platform
  ozone_platform_wayland_external = false

  use_videotexture = false

  is_webos = false

  webos_product_type = "default"

  # Use Neva app runtime
  use_neva_appruntime = true

  # Use Neva media
  use_neva_media = true

  use_neva_media_for_testing = false

  enable_webm_audio_codecs = false

  enable_webm_video_codecs = true

  use_gav = false

  use_gst_media = false

  # Use memory trace feature
  use_memory_trace = false

  # To be used as CBE library
  use_cbe = false

  # If CBE is used, include chrome in it
  is_chrome_cbe = false

  # If CBE is used, include app_shell in it
  is_app_shell_cbe = false

  # If CBE is use, include wam_demo in it
  is_wam_demo_cbe = false

  # Use webOS PmLog logging library
  use_pmlog = false

  # Use LTTng tracing library
  use_lttng = false

  # Use neva webview extension
  use_neva_extensions = false

  # use code cache for local script resource
  use_filescheme_codecache = true

  # Use Neva WebRTC
  use_neva_webrtc = false

  # Enable using local storage tracker
  use_local_storage_tracker = false
}

declare_args() {
  # neva_media also needs a part of punch-hole implementation
  use_neva_punch_hole = use_neva_media
  
  # Suspend capturing audio/video when tab or app is suspended
  use_neva_suspend_media_capture = is_webos

  # Enable network error page controller WebAPI
  enable_network_error_page_controller_webapi = is_webos
}
