# Copyright 2019-2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//services/service_manager/public/cpp/service_executable.gni")

component("neva_media_service") {
  sources = [
    "clients/mojo_media_platform_api.cc",
    "clients/mojo_media_platform_api.h",
    "clients/mojo_media_player.cc",
    "clients/mojo_media_player.h",
    "media_service_provider_impl.cc",
    "media_service_provider_impl.h",
    "neva_media_manifest.cc",
    "neva_media_manifest.h",
    "neva_media_service.cc",
    "neva_media_service.h",
    "services/mojo_media_platform_api_service.cc",
    "services/mojo_media_platform_api_service.h",
    "services/mojo_media_player_service.cc",
    "services/mojo_media_player_service.h",
  ]

  deps = [
    "//base",
    "//media/mojo/common",
    "//media/mojo/mojom",
    "//media/neva:media_platform_api",
    "//media/neva:media_player_neva",
  ]

  public_deps = [
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//neva/neva_media_service/public/mojom",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//skia",
    "//third_party/jsoncpp",
  ]

  defines = [ "IS_NEVA_MEDIA_SERVICE_IMPL" ]
}
