# Copyright 2016-2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/buildflag_header.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/ui.gni")

copy("cursor") {
  sources = [ "images/cursor.png" ]
  outputs = [ "$root_out_dir/cursor.png" ]
}

source_set("wam_demo_lib") {
  testonly = !use_cbe || !is_wam_demo_cbe

  configs += [
    "//content:content_implementation",
    "//v8:external_startup_data",
  ]

  sources = [
    "util.cc",
    "util.h",
    "wam_demo_app_launch_params.cc",
    "wam_demo_app_launch_params.h",
    "wam_demo_application.cc",
    "wam_demo_application.h",
    "wam_demo_emulator_commands.cc",
    "wam_demo_emulator_commands.h",
    "wam_demo_main_delegate.cc",
    "wam_demo_main_delegate.h",
    "wam_demo_manager.cc",
    "wam_demo_manager.h",
    "wam_demo_manager_delegate.h",
    "wam_demo_service.cc",
    "wam_demo_service.h",
    "wam_demo_service_utils.cc",
    "wam_demo_service_utils.h",
    "wam_demo_switches.cc",
    "wam_demo_switches.h",
    "wam_demo_webview.cc",
    "wam_demo_webview.h",
    "wam_demo_webview_observer.h",
    "wam_demo_window.cc",
    "wam_demo_window.h",
    "wam_demo_window_observer.h",
  ]

  deps = [
    ":cursor",
    "//base",
    "//base:base_static",
    "//neva/app_runtime",
    "//neva/emulator",
  ]

  include_dirs = [ "." ]
}

executable("wam_demo") {
  testonly = !use_cbe || !is_wam_demo_cbe
  output_name = "wam_demo"

  configs += [
    "//build/config:precompiled_headers",
    "//skia:skia_config",
  ]

  public_configs = [
    "//third_party/abseil-cpp:absl_include_config",
    "//third_party/webrtc:common_inherited_config",
  ]

  sources = [
    "wam_demo.cc",
  ]

  deps = [
    "//third_party/boringssl",
  ]

  if (use_cbe && is_wam_demo_cbe) {
    deps += [
      "//neva/cbe:chromium_cbe"
    ]
  } else {
    deps += [
      ":wam_demo_lib",
    ]
  }
}
