# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

declare_args() {
  image_path = "$root_build_dir/image"

  wam_demo_app = "com.webos.app.wam-demo"
  wam_demo_dir = "/usr/palm/applications/$wam_demo_app"
  wam_demo_exe = "$wam_demo_dir/wam_demo"

  app_shell_app = "app-shell"
  app_shell_dir = "/usr/bin/$app_shell_app"
  app_shell_exe = "$app_shell_dir/app_shell"

  browser_app = "com.webos.app.browser"
  browser_dir = "/usr/palm/applications/com.webos.app.browser"
  browser_exe = "$app_shell_dir/chrome"

  chromedriver_app = "chromedriver"
  chromedriver_dir = "/usr/bin/$chromedriver_app"
  chromedriver_exe = "$chromedriver_dir/chromedriver"

  webos_sysbus_manifestsdir = "/usr/share/luna-service2/manifests.d/"
  webos_sysbus_pubservicesdir = "/usr/share/dbus-1/services/"
  webos_sysbus_prvservicesdir = "/usr/share/dbus-1/system-services/"
  webos_sysbus_pubrolesdir = "/usr/share/ls2/roles/pub/"
  webos_sysbus_prvrolesdir = "/usr/share/ls2/roles/prv/"
  webos_sysbus_permissionsdir = "/usr/share/luna-service2/client-permissions.d"
  webos_sysbus_rolesdir = "/usr/share/luna-service2/roles.d/"
  webos_sysbus_containersdir = "/usr/share/luna-service2/containers.d/"

  includedir = "/usr/include"
  libdir = "/usr/lib"

  cbe_data_dir = "$libdir/cbe"
  cbe_data_locales_dir = "$cbe_data_dir/neva_locales"
}

template("install_scripts") {
  action(target_name) {
    script = "//webos/install/install.py"
    sources = invoker.sources
    outputs = invoker.outputs

    args = rebase_path(sources) + rebase_path(outputs)
  }
}
